# bd-backend

./: .gitignore  Forms.hs  Foundation.hs  Imports.hs  Main.hs  Sql.hs  Types.hs  Utils.hs  bd.cabal
Handlers/: Api.hs  Auth.hs  Classes.hs  Enums.hs  Primitives.hs  Rels.hs
Session/: User.hs
Sql/: Auth.hs  Classes.hs  Common.hs  Database.sql  Enums.hs  Primitives.hs  Queries.hs  Rels.hs  Schema.hs  User.hs
sql/: create_db.sql  create_schema.sql  create_users.sql  db_dump.sql  drop_schema.sql
